vbnc/vbnc/vbnc/tests/Errors/30439.vb
Class T
    Const i As Byte = 4666%
End Class